testsuite/bsc.interra/messages/EMissingNL/EMissingNL.bs.bsc-out.expected
checking package dependencies
Error: "EMissingNL.bs", line 18, column 0: (P0004)
  Missing newline after -- comment
